Auto stash before merge of "workingoncfrnet" and "origin/workingoncfrnet"

--- a/Blogpost_repoproject.ipynb
+++ b/Blogpost_repoproject.ipynb
@@ -10,63 +10,73 @@
    },
    "source": [
     "## Introduction\n",
-    "The goal of this project was to recreate the neural network and the results (partly) of the following paper: Estimating individual treatment effect: generalization bounds and algorithms (Uri Shalit et al.). The autors of this paper aim to predict the indiviudel treatment effect (ITE) from observational data. Therefore they propose a CFR (Counterfactual Regression) framework. In addition, the authors used a Tensorflow framework for the creating of their network. In this project we aim to reconstruct their network in pytorch."
+    "The goal of this project was to recreate the neural network and the results (partly) of the following paper: Estimating individual treatment effect: generalization bounds and algorithms (Uri Shalit et al.). The autors of this paper aim to predict the indiviudel treatment effect (ITE) from observational data. Therefore they propose a CFR (Counterfactual Regression) framework. In addition, the authors used a Tensorflow framework for the creating of their network. In this project we aim to reconstruct their network in pytorch.\n",
+    "\n",
+    "It should be noted that the authors of the original paper designed the code in such way that a lot of options are adjustable. For example different types of loss functions, regularisation methods, number of layers etc. In this project we choose to not experiment with all these different settings and mostly use the settings as defined in code (default settings). The only settings we changed where the choice of splitting the dataset (see section: CFR network) and the choice of the imbalance measure (see section: Correction for distribution difference)"
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Individual treatment effect\n",
     "The invidual treatment effect (ITE) can be seen as the effect of a certain treatment for a specific patient. One can imagine that it is very usefull to estimate the outcome of a given treatment before the patient receive the treatment.A doctor could then choose the treatment based on the estimated outcome. Observational data e.g. given medication is used order to make such predictions. The ITE can be calculated using the following formula:\n",
     "\n",
-    "$$ITE (x) = E[Y_1 - Y_0 | x]$$\n",
+    "$ITE (x) = E[Y_1 - Y_0 | x]$\n",
     "\n",
-    "Where $$Y_1$$ is the outcome given the treatment and $$Y_0$$ the outcome not given the treatment. Then the ITE of a certain treatment is then the expected outcome given the treatment minus the expected outcome not given the treatment when observing data x."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+    "Where $Y_1$ is the outcome given the treatment and $Y_0$ the outcome not given the treatment. Then the ITE of a certain treatment is then the expected outcome given the treatment minus the expected outcome not given the treatment when observing data x."
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## IHDP dataset\n",
     "This project makes use of the IHDP (Infant Health and Development Program) dataset, in this dataset consist of data from early born baby's and their mother. It includes data of 747 patients from whom 25 covariantes (x) where measured for a total of 100 treatments.\n",
     "\n",
-    "![Table](img/Flowdiagram_repo_projec_Page-3.png)\n",
+    "![Table](table_data.png)\n",
     "\n",
     "This table shows the structure of the dataset.\n",
-    "The value t {1,0} indicates wether a patient is treated (1) or not (0), the y_factual is the outcome and the yc_factual is the outcome if one would have give the opposite treatment. This for example: if a diabetic patient received an insuline in treatment the t value would be 1 for the insuline treatment and the y_factual would be the \"factual\" outcome, the yc_factual outcome would then be the outcome given the opposite treatmentm, so when no insuline was given."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+    "The value t {1,0} indicates whether a patient is treated (1) or not (0), the y_factual is the outcome and the yc_factual is the outcome if one would have give the opposite treatment. This for example: if a diabetic patient received an insuline in treatment the t value would be 1 for the insuline treatment and the y_factual would be the \"factual\" outcome, the yc_factual outcome would then be the outcome given the opposite treatment, so when no insuline was given."
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## CFR-net\n",
-    "For the recreating of the CFR network we firstly stepwise unrevaled the Tensorflow code made by the authors. For this purpose we created a flowchart to gain insight in the proposed network:\n",
-    "![Flowchart](img/Flowdiagram_repo_projec_Page-2.png)\n",
-    "\n",
-    "It can be seen that the network consist of 6 layers, the ReLU a non-linear activation, uses mutiple dropout layers and at half-way it concatenates with the t-values. Finally it gives an output vector y (factual)."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "## CFR-net\n",
+    "For the recreating of the CFR network we firstly stepwise unrevaled the Tensorflow code made by the authors. For this purpose we created a flowchart to gain insight in the proposed network:\n",
+    "\n",
+    "![Flowchart](flow_diagram.png)\n",
+    "\n",
+    "It can be seen that the network consist of 6 layers, the ReLU a non-linear activation, uses multiple dropout layers and at half-way it concatenates with the t-values. Then it user can choose for splitting the data set in two subsets: a subset with all data where t = 1 (treated group) and a subset for all data with t = 0 (not treated). If the user choose to do so then the datasets will be merged again to form 1 output."
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
    "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
     "class FCNet(nn.Module):\n",
     "    \"\"\"\n",
     "    Simple fully connected neural network with residual connections in PyTorch.\n",
@@ -99,101 +109,108 @@
     "        h_rep = self.do3(F.relu(self.layer_2(h)))\n",
     "        h = self._build_output_graph( h, t)\n",
     "\n",
-    "        return h, h_rep\n"
-   ],
+    "        return h, h_rep"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training loop\n",
+    "The training loop of the CFR network makes use of a ADAM optimizer and a MSE-loss criterion. In addition to the loss function there was also corrected for the distribution difference these corrections were added to the loss function. How this was done will be further described in the next section. Further we did not use any regularisation parameters, however the code posted by the authors gives different options for regularisation, but in the default settings it is not used.\n",
+    "\n",
+    "### Exponential learning rate\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "## Corrections for distribution difference\n",
+    "### Sample reweighting\n",
+    "To compensate for the difference in group size (treated / non treated) a sample re-weighting was introduced. All the samples were re-weighted with the following formula:\n",
+    "\n",
+    "$wi = \\frac{ti}{2u} + \\frac{1-ti}{2(1-u)}$ for $i = 1 ... n $\n",
+    "\n",
+    "With t {1,0} and u, the treatment prediction i.e. the chance of being treated based on the patients in this dataset. So for example if a patient has received a certain treatment let's say a patient had a surgery. Then the sample re-weighting would be 2 divided by two times the probability of being treated. If the probability of being treated is really high, close to 1, then a sample will get a relatively low weight. However, if the chance of being treated is very low then the sample would get a higher weight. The same could be observed for t = 0 (not treated). This will somewhat correct for the unequally distributed treatments groups i.e. it will correct for the fact that maybe a lot of patients received treatment A and only a few patients received treatment B."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Training loop\n",
-    "The training loop of the CFR network makes use of a ADAM optimizer and a MSE-loss criterion. The data set was splitted into 75 test samples and 672 train samples. A total of 2000 epochs was used for training.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Corrections for distribution difference\n",
-    "To compensate for the difference in group size (treated / non treated) a sample re-weighting was introduced. All the samples were re-weighted with the following formula:\n",
-    "\n",
-    "$$wi = \\frac{ti}{2u} + \\frac{1-ti}{2(1-u)}$$ for $$i = 1 ... n $$\n",
-    "\n",
-    "With t {1,0} and u, the treatment prediction i.e. the chance of being treated."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "outputs": [],
    "source": [
-    "    # Sample reweighting\n",
-    "    if flags.get_val('reweight_sample'):\n",
+    "    def sample_reweighting(t,p_t):\n",
     "        w_t = t / (2 * p_t)\n",
     "        w_c = (1 - t) / (2 * 1 - p_t)\n",
     "        sample_weight = w_t + w_c\n",
-    "    else:\n",
-    "        sample_weight = 1.0"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "        return sample_weight"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "In addition to the re-weighting of the samples an imbalance error was introduced in the loss function. The imbalnce error adjusts for the bias induced by the treatment group imbalance. There are different methods for the calculation of the imbalance error. For this project the squared linear Maximum Mean discrepancy (MMD) and the Wasserstein methods were used. The actual computations of these imbalance errors goes a bit beyond the scope of this blog post. However, it is good to know that there was corected for the distribution imbalance in two differnt ways. This will also result in two different outcomes."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "### Imbalance error\n",
+    "In addition to the re-weighting of the samples an imbalance error was introduced in the loss function. The imbalance error adjusts for the bias induced by the treatment group imbalance. There are different methods for the calculation of the imbalance error. For this project the squared linear Maximum Mean discrepancy (MMD) and the Wasserstein methods were used. The actual computations of these imbalance errors goes a bit beyond the scope of this blog post. However, it is good to know that there was corected for the distribution imbalance in two differnt ways. This will also result in two different outcomes."
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Outcome measures\n",
-    "--> PEHE\n",
-    "--> ATE"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+    "### PEHE\n",
+    "One of the main outcome measures of the project is the expected precision in Estimation of Heterogeneous Effect (PEHE). Which can be calculated using the following formula:\n",
+    "\n",
+    "$$ \\in PEHE = \\int_x (\\hat{\\tau_f}(x)-\\tau_f(x))^2 p(x) dx $$\n",
+    "\n",
+    "With:\n",
+    "\n",
+    "$$\\hat{\\tau_f}(x) = f(x,1) - f(x,0)$$\n",
+    "\n",
+    "Where $p(x)$ is the distribution of the data x, $f(x,1)$ is the hypothesis for a treatment given that the patient with data x is treated. And $f(x,0)$ is the hypothesis for a treatment given that the patient with data x is not treated. $\\tau_f(x)$ is the ITE for this given treatment. Therefore, it can be concluded that the PEHE is a measure for the squared difference between hypothetical outcome for a treatment (calculated by the neural network) and the given outcome for the treatment. So it gives insight in how well the network can make predictions.\n",
+    "\n",
+    "### ATE\n",
+    "The second main outcome is the absolute error of the average treatment effect (ATE). Following the paper this can be calculated using the following formula:\n",
+    "$$\\in ATE = |\\frac{1}{n}\\sum\\limits_{i=1}^{n} (f(x_i,1)-f(x_i,0)) - \\frac{1}{n}\\sum\\limits_{i=1}^{n} (m_1(xi) - m_0(xi))|$$\n",
+    "\n",
+    "Rewriting knowing that $m_1(xi) - m_0(xi)$ is another description for the ITE gives:\n",
+    "\n",
+    "$$\\in ATE = |\\frac{1}{n}\\sum\\limits_{i=1}^{n} \\hat{\\tau}_i - \\frac{1}{n}\\sum\\limits_{i=1}^{n} \\tau_i|$$\n"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Conclusion"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "## Conclusion\n",
+    "--> MMD vs WSS\n",
+    "--> paper compares also different measuring systems\n",
+    "--> difference between t and 0\n",
+    "--> we don't know which settings the paper used to obtain their results"
+   ]
   }
  ],
  "metadata": {
@@ -205,16 +222,16 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
