Auto stash before merge of "workingoncfrnet" and "origin/workingoncfrnet"

--- a/Blogpost_repoproject.ipynb
+++ b/Blogpost_repoproject.ipynb
@@ -12,7 +12,8 @@
     "## Introduction\n",
     "The goal of this project was to recreate the neural network and the results (partly) of the following paper: Estimating individual treatment effect: generalization bounds and algorithms (Uri Shalit et al.). The autors of this paper aim to predict the indiviudel treatment effect (ITE) from observational data. Therefore they propose a CFR (Counterfactual Regression) framework. In addition, the authors used a Tensorflow framework for the creating of their network. In this project we aim to reconstruct their network in pytorch.\n",
     "\n",
-    "It should be noted that the authors of the original paper designed the code in such way that a lot of options are adjustable. For example different types of loss functions, regularisation methods, number of layers etc. In this project we choose to not experiment with all these different settings and mostly use the settings as defined in code (default settings). The only settings we changed where the choice of splitting the dataset (see section: CFR network) and the choice of the imbalance measure (see section: Correction for distribution difference)"
+    "It should be noted that the authors of the original paper designed the code in such way that a lot of options are adjustable. For example different types of loss functions, regularisation methods, number of layers etc. In this project we choose to not experiment with all these different settings and mostly use the settings as defined in code (default settings). The only settings we changed where the choice of splitting the dataset (see section: CFR network) and the choice of the imbalance measure (see section: Correction for distribution difference)\n",
+    "{cite:p}`perez2011python`"
    ]
   },
   {
@@ -59,14 +60,14 @@
     "## CFR-net\n",
     "For the recreating of the CFR network we firstly stepwise unrevaled the Tensorflow code made by the authors. For this purpose we created a flowchart to gain insight in the proposed network:\n",
     "\n",
-    "![Flowchart](flow_diagram.png)\n",
+    "![Flowchart](flow_chart.png)\n",
     "\n",
     "It can be seen that the network consist of 6 layers, the ReLU a non-linear activation, uses multiple dropout layers and at half-way it concatenates with the t-values. Then it user can choose for splitting the data set in two subsets: a subset with all data where t = 1 (treated group) and a subset for all data with t = 0 (not treated). If the user choose to do so then the datasets will be merged again to form 1 output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -77,6 +78,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
+    "split_output = False\n",
     "class FCNet(nn.Module):\n",
     "    \"\"\"\n",
     "    Simple fully connected neural network with residual connections in PyTorch.\n",
@@ -86,8 +88,9 @@
     "    def __init__(self):\n",
     "        super(FCNet, self).__init__()\n",
     "\n",
-    "        p = 0.4\n",
+    "        p = 0.3\n",
     "\n",
+    "        # Creating the linear layers\n",
     "        self.h_in = nn.Linear(25, 100)\n",
     "        self.layer_1 = nn.Linear(100, 100)\n",
     "        self.layer_2 = nn.Linear(100, 100)\n",
@@ -95,21 +98,55 @@
     "        self.layer_4 = nn.Linear(100, 100)\n",
     "        self.layer_5 = nn.Linear(100, 100)\n",
     "\n",
+    "        # Creating the dropout layers\n",
     "        self.do1 = torch.nn.Dropout(p=p)\n",
     "        self.do2 = torch.nn.Dropout(p=p)\n",
     "        self.do3 = torch.nn.Dropout(p=p)\n",
     "        self.do4 = torch.nn.Dropout(p=p)\n",
     "        self.do5 = torch.nn.Dropout(p=p)\n",
     "        self.do6 = torch.nn.Dropout(p=p)\n",
+    "\n",
+    "        # Creating the linear classifier layer\n",
     "        self.fc6 = nn.Linear(100,1)\n",
     "\n",
+    "    # Forward pass for the first half of the network\n",
     "    def forward(self, x, t):\n",
     "        h = self.do1(F.relu(self.h_in(x)))\n",
     "        h = self.do2(F.relu(self.layer_1(h)))\n",
     "        h_rep = self.do3(F.relu(self.layer_2(h)))\n",
     "        h = self._build_output_graph( h, t)\n",
+    "        self.h_rep = h_rep\n",
     "\n",
-    "        return h, h_rep"
+    "        return h, h_rep\n",
+    "\n",
+    "    # Forward pass for the second half of the network\n",
+    "    def _build_output (self, h):\n",
+    "        h = self.do4(F.relu(self.layer_3(h)))\n",
+    "        h = self.do5(F.relu(self.layer_4(h)))\n",
+    "        h = self.do6(F.relu(self.layer_5(h)))\n",
+    "        h = self.fc6(h)\n",
+    "        return h\n",
+    "\n",
+    "    # Function for splitting data OR concatenate with t\n",
+    "    def _build_output_graph(self, h, t):\n",
+    "        t = torch.round(t)\n",
+    "        if split_output :\n",
+    "            i0 = torch.where(t < 1)\n",
+    "            i1 = torch.where(t > 0)\n",
+    "\n",
+    "            temp=torch.index_select(h, 1, i0[1])\n",
+    "            rep0 = torch.cat((torch.index_select(h, 1, i0[1]),i0[0]),2)\n",
+    "            rep1 = torch.cat((torch.index_select(h, 1, i1[1]),i1[0]),2)\n",
+    "\n",
+    "            y0 = self._build_output(rep0)\n",
+    "            y1 = self._build_output(rep1)\n",
+    "\n",
+    "            y = dynamic_stitch([i0, i1], [y0, y1])\n",
+    "        else:\n",
+    "            h = torch.cat((h,t),1)\n",
+    "            y = self._build_output(h)\n",
+    "\n",
+    "        return y"
    ]
   },
   {
@@ -117,9 +154,7 @@
    "metadata": {},
    "source": [
     "## Training loop\n",
-    "The training loop of the CFR network makes use of a ADAM optimizer and a MSE-loss criterion. In addition to the loss function there was also corrected for the distribution difference these corrections were added to the loss function. How this was done will be further described in the next section. Further we did not use any regularisation parameters, however the code posted by the authors gives different options for regularisation, but in the default settings it is not used.\n",
-    "\n",
-    "### Exponential learning rate\n"
+    "The training loop of the CFR network makes use of a ADAM optimizer and a MSE-loss criterion. In addition to the loss function there was also corrected for the distribution difference these corrections were added to the loss function. How this was done will be further described in the next section. Further we did not use any regularisation parameters, however the code posted by the authors gives different options for regularisation, but in the default settings it is not used.\n"
    ]
   },
   {
@@ -141,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -150,7 +185,7 @@
    "outputs": [],
    "source": [
     "    def sample_reweighting(t,p_t):\n",
-    "        w_t = t / (2 * p_t)\n",
+    "        w_t = t / (2 * p_t)             #p_t: chance of being treated\n",
     "        w_c = (1 - t) / (2 * 1 - p_t)\n",
     "        sample_weight = w_t + w_c\n",
     "        return sample_weight"
@@ -165,8 +200,49 @@
    },
    "source": [
     "### Imbalance error\n",
-    "In addition to the re-weighting of the samples an imbalance error was introduced in the loss function. The imbalance error adjusts for the bias induced by the treatment group imbalance. There are different methods for the calculation of the imbalance error. For this project the squared linear Maximum Mean discrepancy (MMD) and the Wasserstein methods were used. The actual computations of these imbalance errors goes a bit beyond the scope of this blog post. However, it is good to know that there was corected for the distribution imbalance in two differnt ways. This will also result in two different outcomes."
+    "In addition to the re-weighting of the samples an imbalance error was introduced in the loss function. The imbalance error adjusts for the bias induced by the treatment group imbalance. There are different methods for the calculation of the imbalance error. For this project the squared linear Maximum Mean discrepancy (MMD) and the Wasserstein methods were used."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [],
+   "source": [
+    "# Squared linear MMD\n",
+    "def mmd2_lin(X,t,p):\n",
+    "    ''' Linear MMD '''\n",
+    "\n",
+    "    it = torch.where(t>0)[0] # getting the positions\n",
+    "    ic = torch.where(t<1)[0]\n",
+    "\n",
+    "    Xt = torch.index_select(X, 0, it) # Getting the nx100 for each value\n",
+    "    Xc = torch.index_select(X, 0, ic)\n",
+    "\n",
+    "    mean_control = torch.mean(Xc,0) # mean of 1x100\n",
+    "    mean_treated = torch.mean(Xt,0)\n",
+    "\n",
+    "    mmd = torch.sum(torch.square(2.0*p*mean_treated - 2.0*(1.0-p)*mean_control))\n",
+    "\n",
+    "    return mmd"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The actual computations of these imbalance errors goes a bit beyond the scope of this blog post. However, it is good to know that there was corected for the distribution imbalance in two differnt ways. This will also result in two different outcomes."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -180,22 +256,67 @@
     "### PEHE\n",
     "One of the main outcome measures of the project is the expected precision in Estimation of Heterogeneous Effect (PEHE). Which can be calculated using the following formula:\n",
     "\n",
-    "$$ \\in PEHE = \\int_x (\\hat{\\tau_f}(x)-\\tau_f(x))^2 p(x) dx $$\n",
+    "$ \\in PEHE = \\int_x (\\hat{\\tau_f}(x)-\\tau_f(x))^2 p(x) dx $\n",
     "\n",
     "With:\n",
     "\n",
-    "$$\\hat{\\tau_f}(x) = f(x,1) - f(x,0)$$\n",
+    "$\\hat{\\tau_f}(x) = f(x,1) - f(x,0)$\n",
     "\n",
-    "Where $p(x)$ is the distribution of the data x, $f(x,1)$ is the hypothesis for a treatment given that the patient with data x is treated. And $f(x,0)$ is the hypothesis for a treatment given that the patient with data x is not treated. $\\tau_f(x)$ is the ITE for this given treatment. Therefore, it can be concluded that the PEHE is a measure for the squared difference between hypothetical outcome for a treatment (calculated by the neural network) and the given outcome for the treatment. So it gives insight in how well the network can make predictions.\n",
-    "\n",
+    "Where $p(x)$ is the distribution of the data x, $f(x,1)$ is the hypothesis for a treatment given that the patient with data x is treated. And $f(x,0)$ is the hypothesis for a treatment given that the patient with data x is not treated. $\\tau_f(x)$ is the ITE for this given treatment. Therefore, it can be concluded that the PEHE is a measure for the squared difference between hypothetical outcome for a treatment (calculated by the neural network) and the given outcome for the treatment. So it gives insight in how well the network can make predictions. For the actual outcome of this project is the square root of the PEHE used."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### ATE\n",
     "The second main outcome is the absolute error of the average treatment effect (ATE). Following the paper this can be calculated using the following formula:\n",
-    "$$\\in ATE = |\\frac{1}{n}\\sum\\limits_{i=1}^{n} (f(x_i,1)-f(x_i,0)) - \\frac{1}{n}\\sum\\limits_{i=1}^{n} (m_1(xi) - m_0(xi))|$$\n",
+    "$\\in ATE = |\\frac{1}{n}\\sum\\limits_{i=1}^{n} (f(x_i,1)-f(x_i,0)) - \\frac{1}{n}\\sum\\limits_{i=1}^{n} (m_1(xi) - m_0(xi))|$\n",
     "\n",
     "Rewriting knowing that $m_1(xi) - m_0(xi)$ is another description for the ITE gives:\n",
     "\n",
-    "$$\\in ATE = |\\frac{1}{n}\\sum\\limits_{i=1}^{n} \\hat{\\tau}_i - \\frac{1}{n}\\sum\\limits_{i=1}^{n} \\tau_i|$$\n"
-   ]
+    "$\\in ATE = |\\frac{1}{n}\\sum\\limits_{i=1}^{n} \\hat{\\tau}_i - \\frac{1}{n}\\sum\\limits_{i=1}^{n} \\tau_i|$\n",
+    "\n",
+    "The following code is just a short represenation of the lines used for calculating the PEHE and the ATE."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mu1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-31-e4d316ed0723>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;31m# Calculation of PEHE\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[0meff\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mmu1\u001B[0m\u001B[1;33m-\u001B[0m\u001B[0mmu0\u001B[0m \u001B[1;31m# ITE\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[0meff_pred\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mycf_p\u001B[0m \u001B[1;33m-\u001B[0m \u001B[0myf_p\u001B[0m\u001B[1;33m;\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[0mpehe\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msqrt\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mmean\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msquare\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0meff_pred\u001B[0m\u001B[1;33m-\u001B[0m\u001B[0meff\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'mu1' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculation of PEHE\n",
+    "eff = mu1-mu0 # ITE\n",
+    "eff_pred = ycf_p - yf_p;\n",
+    "pehe = np.sqrt(np.mean(np.square(eff_pred-eff)))\n",
+    "\n",
+    "# Calulation of ATE\n",
+    "ate_pred = np.mean(eff_pred)\n",
+    "bias_ate = ate_pred-np.mean(eff)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -205,12 +326,41 @@
     }
    },
    "source": [
+    "## Results\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Conclusion\n",
     "--> MMD vs WSS\n",
     "--> paper compares also different measuring systems\n",
     "--> difference between t and 0\n",
     "--> we don't know which settings the paper used to obtain their results"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## References\n",
+    "bibtex_bibfiles:\n",
+    "    - export(1).bib\n",
+    "```{bibliography}\n",
+    ":style: unsrt\n",
+    "```"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
